--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,3 +2,21 @@ html {
   font-family: "Roboto", sans-serif;
   scroll-behavior: smooth;
 }
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  font-weight: 200;
+  /* background-color: #e6e6e6; */
+  /* background-color: #eaeaea; */
+  background-color: #fff;
+  /* color: #1c1c1c; */
+  color: #545469;
+  overflow-x: hidden;
+  line-height: 1.5;
+}
